objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>05</fullName>
                    <label>Diagnostic</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Bradycardia</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Tachycardia</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Electrophysiology</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>Vascular Intervention</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>Company Code_Account_Division</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>last_update__c</fullName>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sap_account_no__c</fullName>
        <label>SAP Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>